--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -7,7 +7,10 @@
 					<p class="header__text">Ежедневно с 9:00 до 21:00</p>
 				</div>
 				<div class="header__input-wrapper">
-					<img src="@img/header/search.svg" alt="Image" />
+					<button type="button" class="header__button-search">
+						<img src="@img/header/search.svg" alt="Image" />
+
+					</button>
 					<input
 						autocomplete="off"
 						type="text"
