--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,57 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__advantages advantages">
+					<div class="advantages__container">
+						<ul class="advantages__list">
+							<li class="advantages__item advantage">
+								<div class="advantage__top">
+									<div class="advantage__img">
+										<img src="@img/advantages/credit-card.svg" alt="Image">
+									</div>
+									<p class="advantage__title">Моментальный расчёт</p>
+								</div>
+								<p class="advantage__text">Мгновенная оплата по безналичному 
+									расчету на месте приёма</p>
+							</li>
+							<li class="advantages__item advantage">
+								<div class="advantage__top">
+									<div class="advantage__img">
+										<img src="@img/advantages/trending-up.svg" alt="Image">
+									</div>
+									<p class="advantage__title">Высокая цена закупки</p>
+								</div>
+								<p class="advantage__text">Максимальная высокая цена закупки лома 
+									на рынке Санкт-Петербурга</p>
+							</li>
+							<li class="advantages__item advantage">
+								<div class="advantage__top">
+									<div class="advantage__img">
+										<img src="@img/advantages/truck.svg" alt="Image">
+									</div>
+									<p class="advantage__title">Собственный автопарк</p>
+								</div>
+								<p class="advantage__text">Свой автопарк, в составе которого
+									более 30 единиц спецтехники</p>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section class="page__service service">
+					<div class="service__container">
+						<h2 class="service__title">Комплексный
+							сервис</h2>
+						<div class="service__content">
+							<p class="service__text">Компания «ЭКОЛОМ» — ваш надежный партнер по переработке металлолома 
+								в Санкт-Петербурге. Мы стремимся к экологической ответственности, предлагая выгодные условия и профессиональный сервис на всех этапах работы. Гарантируем честность, прозрачность и высокие цены на металлолом!</p>
+							<p class="service__text">Помимо переработки лома, наша компания предлагает комплексные услуги, включая оценку состава металлов, вывоз и демонтаж. Мы осуществляем демонтаж любой сложности – 
+								от кораблей и зданий до железнодорожных составов и путей. Наши опытные специалисты 
+								и собственный автопарк обеспечивают оперативность и надежность в выполнении задач.</p>
+							<p class="service__text">Вместе с компанией «ЭКОЛОМ» вы получаете не только надежного партнера по переработке металлолома, но и комплексный сервис высочайшего уровня. Мы с удовольствием берем 
+								на себя все этапы работы — от приёмки до вывоза и демонтажа.</p>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
